Fix sensorsimulator launch